<resources>
    <string name="app_name">Aps</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_listar">Listar</string>
    <string name="menu_myregistro">Meus Registros</string>
    <string name="menu_excluir">Excluir Registro</string>
    <string name="menu_avaliar">Avaliar Registro</string>
    <string name="menu_addrem">Adicionar / Remover Admin</string>
    <string name="menu_login">Login / Registrar</string>
    <string name="menu_sair">Sair</string>
    <string name="title_activity_maps">Map</string>
    <string name="maps_key">AIzaSyBf_zByfEaLq278t6ZTo2NDKADtoONELA8</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
