<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_listar"
            android:title="@string/menu_listar" />
        <item
            android:id="@+id/nav_myregistro"
            android:title="@string/menu_myregistro" />
    </group>

    <item android:title="Admin">
        <menu>
            <item
                android:id="@+id/nav_excluir"
                android:title="@string/menu_excluir" />
            <item
                android:id="@+id/nav_avaliar"
                android:title="@string/menu_avaliar" />
            <item
                android:id="@+id/nav_addrem"
                android:title="@string/menu_addrem" />
        </menu>
    </item>

    <item android:title="App">
        <menu>
            <item
                android:id="@+id/nav_login"
                android:title="@string/menu_login" />
            <item
                android:id="@+id/nav_sair"
                android:title="@string/menu_sair" />
        </menu>
    </item>

</menu>
