<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_listar">

    <fragment
        android:id="@+id/nav_listar"
        android:name="br.org.aps.ui.listar.ListarFragment"
        android:label="@string/menu_listar"
        tools:layout="@layout/fragment_listar" >
        <action
            android:id="@+id/action_nav_listar_to_nav_listar_view"
            app:destination="@id/nav_listar_view" />
    </fragment>

    <fragment
        android:id="@+id/nav_myregistro"
        android:name="br.org.aps.ui.myregistro.MyRegistroFragment"
        android:label="@string/menu_myregistro"
        tools:layout="@layout/fragment_myregistro" >
        <action
            android:id="@+id/action_nav_myregistro_to_myRegistroAddFragment"
            app:destination="@id/nav_myregistro_add" />
    </fragment>

    <fragment
        android:id="@+id/nav_excluir"
        android:name="br.org.aps.ui.excluir.ExcluirFragment"
        android:label="@string/menu_excluir"
        tools:layout="@layout/fragment_excluir" >
    </fragment>

    <fragment
        android:id="@+id/nav_avaliar"
        android:name="br.org.aps.ui.avaliar.AvaliarFragment"
        android:label="@string/menu_avaliar"
        tools:layout="@layout/fragment_avaliar" >
        <action
            android:id="@+id/action_nav_avaliar_to_nav_avaliar_view"
            app:destination="@id/nav_avaliar_view" />
    </fragment>

    <fragment
        android:id="@+id/nav_addrem"
        android:name="br.org.aps.ui.addrem.AddRemFragment"
        android:label="@string/menu_addrem"
        tools:layout="@layout/fragment_addrem" />

    <fragment
        android:id="@+id/nav_login"
        android:name="br.org.aps.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/nav_listar_view"
        android:name="br.org.aps.ui.listar.ListarViewFragment"
        android:label="fragment_listar_view"
        tools:layout="@layout/fragment_listar_view" />
    <fragment
        android:id="@+id/nav_avaliar_view"
        android:name="br.org.aps.ui.avaliar.AvaliarViewFragment"
        android:label="fragment_avaliar_view"
        tools:layout="@layout/fragment_avaliar_view" />
    <fragment
        android:id="@+id/nav_myregistro_add"
        android:name="br.org.aps.ui.myregistro.MyRegistroAddFragment"
        android:label="Adicionar Registro"
        tools:layout="@layout/fragment_myregistro_add" >
        <action
            android:id="@+id/action_nav_myregistro_add_to_blankFragment"
            app:destination="@id/nav_map" />
    </fragment>
    <fragment
        android:id="@+id/nav_map"
        android:name="br.org.aps.ui.MapFragment"
        android:label="MAPA"
        tools:layout="@layout/fragment_map" />
</navigation>